tests/errors/compiler/float_in_switch/int_arr_in_switch.c
void main()
{
	int arr[1];
	switch (arr)
	case 1:
		break;
}
